Update index.html for sql one

--- a/index.html
+++ b/index.html
@@ -893,5 +893,6 @@
   <script src="script.js"></script>
   <script src="./scripts/components.js"></script>
   <script src="./index.js"></script>
+  <script src="./scriptNode.js"></script>
 </html>
 
