--- a/attendance.html
+++ b/attendance.html
@@ -38,96 +38,28 @@
                 <a class="header-links" href="index.html"> Home </a>
                 <a class="header-links" href="todo.html"> Todo </a>
                 <div class="tw-relative tw-flex tw-flex-col tw-place-items-center">
-                    <div id="nav-dropdown-toggle-0"
-                        class="max-lg:tw-max-w-fit tw-flex header-links tw-gap-1  tw-place-items-center">
-                        <a href="index.html#additional-features"
-                            class="max-lg:tw-max-w-fit tw-flex header-links tw-gap-1 tw-place-items-center">
-                            <span class=""> Features </span>
-                            <i class="tw-text-sm bi bi-chevron-down"></i>
-                        </a>
+                    <div
+                      id="nav-dropdown-toggle-0"
+                    >
+                      <a
+                        href="index.html#features-section"
+                        class="max-lg:tw-max-w-fit tw-flex header-links tw-gap-1 tw-place-items-center"
+                      >
+                        <span class=""> Features </span>
+                      </a>
                     </div>
-                    <nav id="nav-dropdown-list-0" data-open="false" class="tw-scale-0 tw-opacity-0  lg:tw-fixed tw-flex lg:tw-top-[80px] lg:tw-left-1/2 lg:tw--translate-x-1/2 
-                            tw-w-[90%] tw-rounded-lg max-lg:tw-h-0 max-lg:tw-w-0
-                            lg:tw-h-[450px] tw-overflow-hidden
-                             tw-bg-white dark:tw-bg-[#17181B] tw-duration-300 
-                             tw-transition-opacity tw-transition-height tw-shadow-lg tw-p-4">
-                        <div
-                            class="tw-grid max-xl:tw-flex max-xl:tw-flex-col tw-justify-around tw-grid-cols-2 tw-w-full">
-                            <a class="header-links tw-flex tw-text-left tw-gap-4 !tw-p-4" href="#">
-                                <div class="tw-font-semibold tw-text-3xl">
-                                    <i class="bi bi-list-columns-reverse"></i>
-                                </div>
-                                <div class="tw-flex tw-flex-col tw-gap-2">
-                                    <div class="tw-text-lg tw-text-black dark:tw-text-white tw-font-medium">Group Chat
-                                    </div>
-                                    <p>A Space for you to communicate and discuss</p>
-                                </div>
-                            </a>
-
-                            <a class="header-links tw-flex tw-text-left tw-gap-4 !tw-p-4" href="#">
-                                <div class="tw-font-semibold tw-text-3xl">
-                                    <i class="bi bi-calendar"></i>
-                                </div>
-                                <div class="tw-flex tw-flex-col tw-gap-2">
-                                    <div class="tw-text-lg tw-text-black dark:tw-text-white tw-font-medium">Calender
-                                        View </div>
-                                    <p class="">Get a detailed view of your list</p>
-                                </div>
-                            </a>
-
-                            <a class="header-links tw-flex tw-text-left tw-gap-4 !tw-p-4" href="#">
-                                <div class="tw-font-semibold tw-text-3xl">
-                                    <i class="bi bi-globe"></i>
-                                </div>
-                                <div class="tw-flex tw-flex-col tw-gap-2">
-                                    <div class="tw-text-lg tw-text-black dark:tw-text-white tw-font-medium">Realtime web
-                                        search </div>
-                                    <p class="">Search the internet in realtime</p>
-                                </div>
-                            </a>
-
-                            <a class="header-links tw-flex tw-text-left tw-gap-4 !tw-p-4" href="index.html#experience"
-                                onclick="scrollToExperience(event)">
-                                <div class="tw-font-semibold tw-text-3xl">
-                                    <i class="bi bi-coin"></i>
-                                </div>
-                                <div class="tw-flex tw-flex-col tw-gap-2">
-                                    <div class="tw-text-lg tw-text-black dark:tw-text-white tw-font-medium">
-                                        Toss a Coin
-                                    </div>
-                                    <p class="">Helps you in making a calculated decision</p>
-                                </div>
-                            </a>
-
-
-                            <a class="header-links tw-flex tw-text-left tw-gap-4 !tw-p-4" href="#">
-                                <div class="tw-font-semibold tw-text-3xl">
-                                    <i class="bi bi-alexa"></i>
-                                </div>
-                                <div class="tw-flex tw-flex-col tw-gap-2">
-                                    <div class="tw-text-lg tw-text-black dark:tw-text-white tw-font-medium">
-                                        AI
-                                    </div>
-                                    <p class="">Ask the AI anything you want</p>
-                                </div>
-                            </a>
-
-                            <a class="header-links tw-flex tw-text-left tw-gap-4 !tw-p-4" href="#">
-                                <div class="tw-font-semibold tw-text-3xl">
-                                    <i class="bi bi-translate"></i>
-                                </div>
-                                <div class="tw-flex tw-flex-col tw-gap-2">
-                                    <div class="tw-text-lg tw-text-black dark:tw-text-white tw-font-medium">
-                                        Multilingual support
-                                    </div>
-                                    <p class="">Allows to use the app in preferred language.</p>
-                                </div>
-                            </a>
-
-                        </div>
-                    </nav>
-                </div>
-                <a class="header-links" href="index.html#experience" onclick="scrollToExperience(event)"> tossCoin </a>
+                    <nav
+                      id="nav-dropdown-list-0"
+                      data-open="false"
+                      class="tw-scale-0 tw-opacity-0 lg:tw-fixed tw-flex lg:tw-top-[80px] lg:tw-left-1/2 lg:tw--translate-x-1/2 tw-w-[90%] tw-rounded-lg max-lg:tw-h-0 max-lg:tw-w-0 lg:tw-h-[450px] tw-overflow-hidden tw-bg-white dark:tw-bg-[#17181B] tw-duration-300 tw-transition-opacity tw-transition-height tw-shadow-lg tw-p-4"
+                    ></nav>
+                  </div>
+                  <a
+                  href="index.html#toss-coin-section"
+                  class="max-lg:tw-max-w-fit tw-flex header-links tw-gap-1 tw-place-items-center"
+                >
+                  <span class=""> Toss a Coin </span>
+                </a>
 
             </nav>
             <div class="lg:tw-mx-4 tw-flex tw-place-items-center tw-gap-[20px] tw-text-base max-md:tw-w-full 
@@ -232,8 +164,6 @@
         </div>
     </div>
 
-
-    <script src="./scripts/components.js"> </script>
     <script src="./attendance.js"></script>
 </body>
 
